# demon

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md
datasets/: .gitignore  README_testdata  download_testdata.sh  download_traindata.sh  extract_h5_datasets_to_filesystem.py  generate_sun3d_train_datasets.py  sun3d_train_sequences.txt  testdata.md5
datasets/traindata/: traindata.md5
examples/: .gitignore  create_dataset_and_use_readerop.py  evaluation.py  example.py  example_v2.py  sculpture_Rt1.txt  sculpture_Rt2.txt  sculpture_depth1.npy  sculpture_depth2.npy
multivih5datareaderop/: CMakeLists.txt  README.md  lz4_cmakelists.txt  multivih5datareader.cpp  multivih5datareader.h  multivih5datareaderop.cc  simpleh5file.cpp  simpleh5file.h
python/depthmotionnet/: __init__.py  blocks_original.py  helpers.py  networks_original.py  vis.py  vis_cython.pyx
python/depthmotionnet/datareader/: __init__.py  helpers.py
python/depthmotionnet/dataset_tools/: __init__.py  helpers.py  lz4.py  sun3d_utils.py  view.py  view_io.py  view_tools.py  view_tools_cython.pyx  webp.py
python/depthmotionnet/evaluation/: __init__.py  evaluate_to_xarray.py  helpers.py  metrics.py
python/depthmotionnet/v2/: __init__.py  blocks.py  helpers.py  losses.py  networks.py
training/: README.md
training/v2/: training.py
weights/: .gitignore  download_weights.sh
